--- a/css/owl.carousel.css
+++ b/css/owl.carousel.css
@@ -29,7 +29,7 @@
   .owl-carousel .owl-stage-outer {
     position: relative;
     overflow: hidden;
-    /* fix for flashing background */
+    /* fix for flashing background 
     -webkit-transform: translate3d(0px, 0px, 0px); }
   .owl-carousel .owl-wrapper,
   .owl-carousel .owl-item {
@@ -38,7 +38,7 @@
     -ms-backface-visibility: hidden;
     -webkit-transform: translate3d(0, 0, 0);
     -moz-transform: translate3d(0, 0, 0);
-    -ms-transform: translate3d(0, 0, 0); }
+    -ms-transform: translate3d(0, 0, 0); */}
   .owl-carousel .owl-item {
     position: relative;
     min-height: 1px;
@@ -99,7 +99,7 @@
 
 /*
  *  Owl Carousel - Animate Plugin
- */
+ 
 .owl-carousel .animated {
   animation-duration: 1000ms;
   animation-fill-mode: both; }
@@ -118,21 +118,27 @@
     opacity: 1; }
   100% {
     opacity: 0; } }
-
+*/
 /*
  * 	Owl Carousel - Auto Height Plugin
- */
+ 
+
+
 .owl-height {
-  transition: height 500ms ease-in-out; }
+  transition: height 500ms linear; }
+
+
+
+*/
 
 /*
  * 	Owl Carousel - Lazy Load Plugin
- */
+ *//**
 .owl-carousel .owl-item {
-  /**
+  
 			This is introduced due to a bug in IE11 where lazy loading combined with autoheight plugin causes a wrong
 			calculation of the height of the owl-item that breaks page layouts
-		 */ }
+		  }
   .owl-carousel .owl-item .owl-lazy {
     opacity: 0;
     transition: opacity 400ms ease; }
@@ -140,47 +146,7 @@
     max-height: 0; }
   .owl-carousel .owl-item img.owl-lazy {
     transform-style: preserve-3d; }
-
+*/
 /*
  * 	Owl Carousel - Video Plugin
  */
-.owl-carousel .owl-video-wrapper {
-  position: relative;
-  height: 100%;
-  background: #000; }
-
-.owl-carousel .owl-video-play-icon {
-  position: absolute;
-  height: 80px;
-  width: 80px;
-  left: 50%;
-  top: 50%;
-  margin-left: -40px;
-  margin-top: -40px;
-  background: url("owl.video.play.png") no-repeat;
-  cursor: pointer;
-  z-index: 1;
-  -webkit-backface-visibility: hidden;
-  transition: transform 100ms ease; }
-
-.owl-carousel .owl-video-play-icon:hover {
-  -ms-transform: scale(1.3, 1.3);
-      transform: scale(1.3, 1.3); }
-
-.owl-carousel .owl-video-playing .owl-video-tn,
-.owl-carousel .owl-video-playing .owl-video-play-icon {
-  display: none; }
-
-.owl-carousel .owl-video-tn {
-  opacity: 0;
-  height: 100%;
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-size: contain;
-  transition: opacity 400ms ease; }
-
-.owl-carousel .owl-video-frame {
-  position: relative;
-  z-index: 1;
-  height: 100%;
-  width: 100%; }
