--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,8 @@
 	--nw: #dddddd;
 }
 body{
-	font-family: 'Montserrat', sans-serif;
+	font-family: 'Montserrat', sans-serif !important;
+	/*font-family: 'Mitr', sans-serif ;*/
 }
 /* ------ seccion banner ----------*/
 .banner{
@@ -33,9 +34,8 @@ body{
 
 /* ------ seccion tarjetas rapidas ----------*/
 .tarjetas-r{
-	min-height: 500px;
 	padding-top: 80px;
-	padding-bottom: 40px;
+	padding-bottom: 100px;
 }
 .tarjetas-r h2{
 	color: var(--nb);
@@ -122,6 +122,12 @@ body{
 
 
 /* --------- seccion eventos -----------------*/
+.eventos{
+	background: #fafafa;
+	padding-top: 80px;
+	padding-bottom: 80px;
+	
+}
 .eventos h2{
 	font-size: 24px;
 	font-weight: 600;
@@ -132,14 +138,44 @@ body{
 .eventos .eventos-card{
 	height: 400px;
 	
-	
-	
 }
 .eventos .eventos-card .infor-eve{
 	height: 100%;
 	width: 100%;
-	
-	background: red;
+	padding-top: 5%;
+	padding-left: 12%;
+	padding-right: 10%;
+	padding-bottom: 10%;
+	-webkit-box-shadow: inset 200px 0px 71px 200px rgba(0,0,0,0.5);
+-moz-box-shadow: inset 200px 0px 71px 200px rgba(0,0,0,0.5);
+box-shadow: inset 200px 0px 71px 200px rgba(0,0,0,0.5);
+
+}
+
+.eventos .eventos-card .infor-eve h4{
+	font-size: 32px;
+	font-weight: 600;
+	color: #fff;
+	background: var(--cpri);
+	display: inline-block;
+	padding: 5px 10px 5px 10px;
+	-webkit-box-shadow: 4px 5px 0px 2px rgba(0,238,255,1);
+	-moz-box-shadow: 4px 5px 0px 2px rgba(0,238,255,1);
+	box-shadow: 4px 5px 0px 2px rgba(0,238,255,1);
+}
+.eventos .eventos-card .infor-eve p{
+	margin-right: 30%;
+	color: #fff;
+	font-weight: 400;
+	font-size: 16px;
+	margin-top: 15px;
+}
+.eventos .eventos-card .infor-eve span{
+	background: #BDE700;
+	color: var(--nf);
+	padding: 2px 15px;
+	font-size: 18px;
+	font-weight: 600;
 }
 
 
@@ -222,10 +258,11 @@ body{
 }
 .information-dest .c2 h3 strong{
 	color: var(--cpri);
+	font-weight: 900;
 }
 .information-dest .c2 h3, .information-dest .c3 h3{
 	margin-top: 15px;
-	font-weight: 400;
+	font-weight: 600;
 }
 
 .information-dest .c2:hover, .information-dest .c3:hover{
@@ -248,7 +285,7 @@ body{
 }
 .information-dest .servicios ul li{
 	font-size: 18px;
-	font-weight: 400;
+	font-weight: 600;
 	
 }
 .information-dest .servicios ul li a:link{
@@ -271,6 +308,9 @@ body{
 	margin-top: 44px;
 }
 
+.information-dest .relle{
+	display: none;
+}
 
 /* -----------seccion conoce doctor mora ------------ */
 
@@ -319,7 +359,7 @@ body{
 	-moz-border-radius:50px;
 	-webkit-border-radius:50px;
 	border-radius:50px;
-	padding: 1% 3%;
+	padding: 10px 30px;
 	text-decoration: none;
 	margin-top: 35px;
 	color: var(--cpri);
@@ -601,6 +641,14 @@ body{
 		font-size: 16px;
 	}
 	
+	/*---- informacion destacada -----*/
+	
+	.information-dest .c1 h3 {
+		margin-bottom: 16px;
+	}
+	
+	
+	
 }	
 
 @media screen and (max-width: 991px){
@@ -627,6 +675,58 @@ body{
 		font-size: 14px;
 	}
 	
+	/*------------- seccion eventos ------------*/
+	.eventos .eventos-card{
+		height: 300px;
+	}
+	
+	/*-------- seccion informacion destacada -------*/
+	.information-dest .gobierno{
+		height: 100%;
+	}
+	.information-dest .c1 h3 {
+		margin-bottom: 0;
+	}
+	/*-------------------------------------------------------poner aqui--------------------*/
+	
+	.information-dest .servicios{
+		padding-left: 2.5%;
+		padding-top: 80px;
+	}
+	.information-dest .servicios ul li{
+		padding-left: 5%;
+		border-radius: 10px;
+		padding-top: 15px;
+		padding-bottom: 15px;
+		border: 1px solid #e5e5e5;
+		-webkit-box-shadow: 0px 0px 25px 0px rgba(173,173,173,0.15);
+		-moz-box-shadow: 0px 0px 25px 0px rgba(173,173,173,0.15);
+		box-shadow: 0px 0px 25px 0px rgba(173,173,173,0.15);
+	}
+	.information-dest .servicios ul li:nth-child(1){
+		border-left: 6px solid #00D3E5;
+		
+	}
+	.information-dest .servicios ul li:nth-child(2){
+		border-left: 6px solid #05C01B;
+	}
+	.information-dest .servicios ul li:nth-child(3){
+		border-left: 6px solid #393939;
+	}
+	.information-dest .servicios ul li:nth-child(4){
+		border-left: 6px solid #FF0251;
+	}
+	.information-dest .servicios .esp{
+		margin-top: 20px;
+	}
+	
+	
+	
+	.information-dest .relle{
+		display: block;
+	}
+	
+	
 }
 
 @media screen and (max-width: 767px){
@@ -640,6 +740,11 @@ body{
 	}
 	
 	/*---- estilos tarjetas rapidas ------*/
+	.tarjetas-r {
+		padding-top: 60px;
+		padding-bottom: 80px;
+	}
+	
 	.tarjetas-r .paff{
 		padding-left: 5%;
 		padding-right: 5%;
@@ -672,8 +777,63 @@ body{
 	
 	/*---------------- seccion eventos ------------------*/
 	
+	.eventos {
+		padding-top: 30px;
+		padding-bottom: 40px;
+	}
+	
+	.eventos .eventos-card .infor-eve h4{
+		font-size: 24px;
+		font-weight: 600;
+
+		-webkit-box-shadow: none;
+		-moz-box-shadow: none;
+		box-shadow: none;
+	}
+	.eventos .eventos-card .infor-eve p{
+		margin-right: 20%;
+		font-size: 14px;
+
+	}
+	.eventos .eventos-card .infor-eve span{
+		font-size: 16px;
+	}
 	
 	
+	/* ---- seccion informacion destacada */
+	
+	
+	.information-dest img{
+		width: 50px;
+	}
+	.information-dest .gobierno img{
+		width: 120px;
+	}
+	
+	.information-dest .c2, .information-dest .c3 {
+		min-height: auto;
+		padding-top: 0;
+		
+	}
+	.information-dest .c1 h3, .information-dest .c2 h3, .information-dest .c3 h3{
+		font-size: 12px;
+	}
+	
+	
+	
+	.information-dest .servicios{
+		
+		padding-top: 60px;
+	}
+	.information-dest .servicios ul li {
+		font-size: 14px;
+	}
+	
+	/*-------- titulos sin icono ----------*/
+	
+	.tarjetas-r h2 img, .eventos h2 img, .information-dest h2 img, .reportes h2 img{
+		display: none;
+	}
 	
 	
 }
@@ -702,6 +862,10 @@ body{
 		margin-right: 5%;
 	}
 	/*---- estilos tarjetas rapidas ------*/
+	.tarjetas-r {
+		padding-top: 50px;
+		padding-bottom: 50px;
+	}
 	.tarjetas-r p {
 		font-size: 16px;
 	}
@@ -714,6 +878,48 @@ body{
 		padding-top: 10px;
 	}
 
+	.eventos .eventos-card .infor-eve p{
+		margin-right: 0;
+		
+	}
+	
+	/* -- informacion destacada ---*/
+	.information-dest .c1 {
+		
+		padding-top: 0px;
+		padding-bottom: 0px;
+	}
+	.information-dest img{
+		width: 60px;
+	}
+	
+	.information-dest .gobierno img {
+		width: 60px;
+	}
+	
+	.information-dest .numeros{
+		display: flex;
+		justify-content: space-between;
+	}
+	
+	.information-dest .c2, .information-dest .c3{
+		width: 45%;
+	}
+	
+	.information-dest .c2 {
+		margin-top: 30px;
+		
+	}
+	.information-dest .c3 {
+		margin-bottom: 30px;
+		margin-top: 30px;	
+	}
+	
+	.information-dest .servicios{
+		
+		padding-top: 20px;
+	}
+	
 }
 
 @media screen and (max-width: 540px){
@@ -742,7 +948,7 @@ body{
 		justify-content: center;
 	}
 	.tarjetas-r-c .card {
-    	min-width: 150px;
+    	min-width: 180px;
 		min-height: 150px;
 		padding-top: 15px;
 		margin-bottom: 4%;
@@ -757,8 +963,28 @@ body{
 		font-size: 12px;
 	}
 	
+	
+	/* ---- seccion enventos ---*/
 	.eventos .eventos-card{
 		height: 200px;
+		
+	}
+	.eventos .eventos-card .infor-eve h4{
+		font-size: 20px;
+		
+	}
+	.eventos .eventos-card .infor-eve p{
+		display: none;
+		
+	}
+	.eventos .eventos-card .infor-eve span{
+		font-size: 12px;
+		
+	}
+	
+	.eventos .eventos-card .infor-eve h4, .eventos .eventos-card .infor-eve span{
+		display: inline-block;
+		
 	}
 	
 }
@@ -773,13 +999,43 @@ body{
 	
 }
 
+@media screen and (max-width: 434px){
+	.tarjetas-r-c .card {
+    	min-width: 160px;
+		
+	}
+}
+
+@media screen and (max-width: 384px){
+	/* ---- seccion enventos ---*/
+	.eventos .eventos-card{
+		height: 180px;
+		
+	}
+	.eventos .eventos-card .infor-eve h4{
+		font-size: 16px;
+		
+	}
+	
+	
+}
+
+
+@media screen and (max-width: 348px){
+	.tarjetas-r-c .card {
+    	min-width: 140px;
+		
+	}
+}
+
+
+
 @media screen and (max-width: 344px){
 	/*---- estilos tarjetas rapidas ------*/
 	.tarjetas-r-c{
 		justify-content: center;
 	}
 	.tarjetas-r-c .card {
-    	min-width: 110px;
 		min-height: 100px;
 		padding-top: 10px;
 		margin-bottom: 4%;
@@ -794,5 +1050,27 @@ body{
 		font-size: 12px;
 	}
 	
+}
+
+@media screen and (max-width: 304px){
+	.tarjetas-r-c .card {
+		min-width: 120px;
+	}
+}
+
+@media screen and (max-width: 260px){
 	
+	.banner h1 {
+		font-size: 32px;
+	}
+	
+	.tarjetas-r-c .card {
+		min-width: 100px;
+	}
+}
+
+@media screen and (max-width: 225px){
+	.tarjetas-r-c .card {
+		min-width: 150px;
+	}
 }
