--- a/css/styles.css
+++ b/css/styles.css
@@ -316,7 +316,7 @@ box-shadow: inset 200px 0px 71px 200px rgba(0,0,0,0.5);
 
 .conoce{
 	min-height: 440px;
-	background: url(../img/conoce.jpg) center center no-repeat;	
+	background: url(../img/gbi.jpg) center center no-repeat;	
 	background-size: cover;
 	text-align: center;
 	display: flex;
@@ -434,8 +434,8 @@ box-shadow: inset 200px 0px 71px 200px rgba(0,0,0,0.5);
 	align-items: center;
 }
 .reportes .information-r .card ul li span{
-	height: 20px;
-	width: 20px;
+	height: 15px;
+	width: 15px;
 	display: inline-block;
 	-moz-border-radius:10px;
 	-webkit-border-radius:10px;
@@ -501,8 +501,9 @@ box-shadow: inset 200px 0px 71px 200px rgba(0,0,0,0.5);
 }
 .dudas h5{
 	font-size: 24px;
-	font-weight: 600;
+	font-weight: 900;
 	color: var(--nf);
+	font-style: italic;
 }
 .dudas p{
 	font-size: 16px;
@@ -556,7 +557,7 @@ box-shadow: inset 200px 0px 71px 200px rgba(0,0,0,0.5);
 
 /* --------- seccion dyxer ------------*/
 .dyxer{
-	min-height: 400px;
+	height: auto;
 	width: 100%;
 	padding: 100px 0;
 	background: #fafafa;
@@ -687,7 +688,10 @@ box-shadow: inset 200px 0px 71px 200px rgba(0,0,0,0.5);
 	.information-dest .c1 h3 {
 		margin-bottom: 0;
 	}
-	/*-------------------------------------------------------poner aqui--------------------*/
+	
+	.information-dest {
+		padding-top: 60px;
+	}
 	
 	.information-dest .servicios{
 		padding-left: 2.5%;
@@ -721,11 +725,55 @@ box-shadow: inset 200px 0px 71px 200px rgba(0,0,0,0.5);
 	}
 	
 	
+	/*---- seccion conoce -----------*/
 	
-	.information-dest .relle{
-		display: block;
+	.conoce{
+		min-height: 300px;
+		margin-top: 0;
 	}
 	
+	.conoce h3 {
+		font-size: 36px;
+	}
+	
+	/*----- seccion reportes ---*/
+	.reportes .image{
+		display: none;
+	}
+	
+	
+	/*---- seccion dudas ---*/
+	.dudas {
+		padding: 80px 0;
+	}
+	.dudas .people{
+		text-align: center;
+		display: flex;
+		justify-content: center;
+	}
+	.dudas .people img{
+		width: 400px;
+		margin-top: 5%;	
+	}
+	
+	/* --- seccion dyxer ----*/
+	
+	.dyxer{
+		padding: 50px 0;
+	}
+	.dyxer h6{
+		font-size: 14px;
+		font-weight: 600;
+	}
+	.dyxer img{
+		width: 200px;
+	}
+	
+	/*--- seccion pie ---*/
+	.pie h6 {
+		font-size: 14px;
+	}
+
 	
 }
 
@@ -802,6 +850,9 @@ box-shadow: inset 200px 0px 71px 200px rgba(0,0,0,0.5);
 	
 	/* ---- seccion informacion destacada */
 	
+	.information-dest {
+		padding-top: 30px;
+	}
 	
 	.information-dest img{
 		width: 50px;
@@ -834,6 +885,40 @@ box-shadow: inset 200px 0px 71px 200px rgba(0,0,0,0.5);
 	.tarjetas-r h2 img, .eventos h2 img, .information-dest h2 img, .reportes h2 img{
 		display: none;
 	}
+	.tarjetas-r h2, .eventos h2, .information-dest h2, .reportes h2{
+		font-weight: 900;
+		font-style: italic;
+	}
+	
+	
+	/* ----- seccion conoce ---------*/
+	.conoce{
+		min-height: 200px;
+		margin-top: 0;
+	}
+	
+	.conoce h3 {
+		font-size: 28px;
+	}
+	
+	
+	.conoce a {
+		margin-top: 20px;
+		font-size: 12px;
+	}
+	
+	
+	/*---- seccion reportes -----*/
+	.reportes .information-r .card ul li {
+		font-size: 14px;
+		
+	}
+	/*--- dudas ----*/
+	
+	.dudas .people img{
+		display: none;	
+	}
+	
 	
 	
 }
@@ -903,7 +988,7 @@ box-shadow: inset 200px 0px 71px 200px rgba(0,0,0,0.5);
 	}
 	
 	.information-dest .c2, .information-dest .c3{
-		width: 45%;
+		width: 48%;
 	}
 	
 	.information-dest .c2 {
@@ -919,6 +1004,29 @@ box-shadow: inset 200px 0px 71px 200px rgba(0,0,0,0.5);
 		
 		padding-top: 20px;
 	}
+	
+	/* ----- estilos para los titulos de tarjetas rapidas eventos informacion destacada y reportes ---*/
+	.tarjetas-r h2, .eventos h2, .information-dest h2, .reportes h2{
+		font-size: 20px;
+	}
+	
+	/*  --- seccion dudas ---*/
+	/*---- seccion dudas ---*/
+	.dudas {
+		padding: 60px 4%;
+	}
+	.dudas h5 {
+		font-size: 18px;
+	}
+	.dudas p {
+		font-size: 14px;
+	}
+	
+	/* --- seccion pie ----*/
+	.pie h6 {
+		font-size: 12px;
+	}
+	
 	
 }
 
@@ -1007,6 +1115,7 @@ box-shadow: inset 200px 0px 71px 200px rgba(0,0,0,0.5);
 }
 
 @media screen and (max-width: 384px){
+	
 	/* ---- seccion enventos ---*/
 	.eventos .eventos-card{
 		height: 180px;
@@ -1014,7 +1123,14 @@ box-shadow: inset 200px 0px 71px 200px rgba(0,0,0,0.5);
 	}
 	.eventos .eventos-card .infor-eve h4{
 		font-size: 16px;
-		
+	}
+	
+	/*---- seccion conoce ---*/
+	.conoce h3 {
+		font-size: 24px;
+	}
+	.conoce a {
+		margin-top: 10px;
 	}
 	
 	
@@ -1048,6 +1164,19 @@ box-shadow: inset 200px 0px 71px 200px rgba(0,0,0,0.5);
 	
 	.tarjetas-r-c .card h3{
 		font-size: 12px;
+	}
+	
+	
+	/*---- informacion destacada ----*/
+	.information-dest img {
+		width: 35px;
+	}
+	
+}
+
+@media screen and (max-width: 329px){
+	.pie h6 {
+		font-size: 11px;
 	}
 	
 }
